Fix horizontal scrolling

--- a/client/scss/components/v-top32.scss
+++ b/client/scss/components/v-top32.scss
@@ -1,10 +1,11 @@
 $border-style: 1px solid #9e9e9e;
+.v-top32-root {
+  overflow-x: scroll;
+}
 .v-top32 {
   display: inline-flex;
   flex-direction: row;
   justify-content: center;
-  overflow-x: auto !important;
-  overflow-y: hidden !important;
   white-space: nowrap;
   padding-left: '20px !important';
 
